[project]
name = "mousejiggler"
version = "0.1.0"
description = ""
authors = [{name = "Harry Pan", email = "pan.xingzhi@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyautogui>=0.9.54",
]

[project.scripts]
mouse-jiggler = "mouse_jiggler:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "/.git",
    "/.venv",
    "__pycache__",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
